--- a/index.html
+++ b/index.html
@@ -530,51 +530,61 @@
                 <div
                     class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-6"
                 >
-                    <div class="badge-card">
-                        <img
-                            src="https://via.placeholder.com/100/FF0000/FFFFFF?text=Badge+1"
-                            alt="Credly Badge 1"
-                        />
-                        <h4 class="text-md font-semibold primary-text mb-1">
-                            Badge Title 1
-                        </h4>
-                        <a
-                            href="https://www.credly.com/users/your-profile-link"
-                            target="_blank"
-                            rel="noopener noreferrer"
-                            >View Credly Badge</a
-                        >
-                    </div>
-                    <div class="badge-card">
-                        <img
-                            src="https://via.placeholder.com/100/00FF00/FFFFFF?text=Badge+2"
-                            alt="Credly Badge 2"
-                        />
-                        <h4 class="text-md font-semibold primary-text mb-1">
-                            Badge Title 2
-                        </h4>
-                        <a
-                            href="https://www.credly.com/users/your-profile-link"
-                            target="_blank"
-                            rel="noopener noreferrer"
-                            >View Credly Badge</a
-                        >
-                    </div>
-                    <div class="badge-card">
-                        <img
-                            src="https://via.placeholder.com/100/0000FF/FFFFFF?text=Badge+3"
-                            alt="Credly Badge 3"
-                        />
-                        <h4 class="text-md font-semibold primary-text mb-1">
-                            Badge Title 3
-                        </h4>
-                        <a
-                            href="https://www.credly.com/users/your-profile-link"
-                            target="_blank"
-                            rel="noopener noreferrer"
-                            >View Credly Badge</a
-                        >
-                    </div>
+                    <div
+                        data-iframe-width="150"
+                        data-iframe-height="270"
+                        data-share-badge-id="7c9c2ed1-d269-4048-b825-1aced1a7164b"
+                        data-share-badge-host="https://www.credly.com"
+                    ></div>
+                    <script
+                        type="text/javascript"
+                        async
+                        src="//cdn.credly.com/assets/utilities/embed.js"
+                    ></script>
+                    <div
+                        data-iframe-width="150"
+                        data-iframe-height="270"
+                        data-share-badge-id="e381a674-c226-4313-896a-eb18823a954c"
+                        data-share-badge-host="https://www.credly.com"
+                    ></div>
+                    <script
+                        type="text/javascript"
+                        async
+                        src="//cdn.credly.com/assets/utilities/embed.js"
+                    ></script>
+                    <div
+                        data-iframe-width="150"
+                        data-iframe-height="270"
+                        data-share-badge-id="f139e161-3654-472a-a921-0b82cc4e287d"
+                        data-share-badge-host="https://www.credly.com"
+                    ></div>
+                    <script
+                        type="text/javascript"
+                        async
+                        src="//cdn.credly.com/assets/utilities/embed.js"
+                    ></script>
+                    <div
+                        data-iframe-width="150"
+                        data-iframe-height="270"
+                        data-share-badge-id="708349af-24c3-4700-9732-f20440c59daf"
+                        data-share-badge-host="https://www.credly.com"
+                    ></div>
+                    <script
+                        type="text/javascript"
+                        async
+                        src="//cdn.credly.com/assets/utilities/embed.js"
+                    ></script>
+                    <div
+                        data-iframe-width="150"
+                        data-iframe-height="270"
+                        data-share-badge-id="d5784555-54ab-4872-94ae-c892aa36968a"
+                        data-share-badge-host="https://www.credly.com"
+                    ></div>
+                    <script
+                        type="text/javascript"
+                        async
+                        src="//cdn.credly.com/assets/utilities/embed.js"
+                    ></script>
                 </div>
                 <p class="text-center text-sm text-slate-500 mt-8">
                     You can replace the placeholder images and links with your
@@ -678,12 +688,12 @@
                     "Automation & Orchestration",
                     "Cloud & Infrastructure",
                     "Monitoring & Management",
-                    "Development & Scripting",
+                    "Development, Scripting & Deployment", // Python, Bash, SQL, Finacle Scripting, API Management
                 ],
                 datasets: [
                     {
                         label: "Core Skill Distribution",
-                        data: [35, 25, 20, 20],
+                        data: [35, 20, 15, 30], // Example distribution percentages, adjust as needed
                         backgroundColor: [
                             "#EF5675",
                             "#7A5195",
