--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Opeyemi Oluwadare - DevOps Infographic</title>
+        <title>Opeyemi Oluwadare - Infographic CV</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <style>
@@ -528,8 +528,7 @@
                     professional development and certification exams.
                 </p>
                 <div
-                    class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-6"
-                >
+                    class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-6">
                     <div
                         data-iframe-width="150"
                         data-iframe-height="270"
@@ -586,10 +585,6 @@
                         src="//cdn.credly.com/assets/utilities/embed.js"
                     ></script>
                 </div>
-                <p class="text-center text-sm text-slate-500 mt-8">
-                    You can replace the placeholder images and links with your
-                    actual Credly badge details.
-                </p>
             </div>
         </section>
 
