--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             }
             .section-heading {
                 /* Added w-full and kept mb-16 and text-center */
-                @apply text-3xl md:text-4xl font-bold primary-text mb-16 text-center w-full;
+                @apply text-3xl md:text-4xl font-bold primary-text mb-32 text-center w-full;
             }
             .timeline-item {
                 @apply relative pl-8 sm:pl-10 py-6 group;
@@ -374,7 +374,7 @@
                         </h4>
                         <p>
                             <span class="skill-tag">Google Cloud Platform</span
-                            ><span class="skill-tag">Azure Fundamentals</span>
+                            >, <span class="skill-tag">Azure Fundamentals</span>
                         </p>
                     </div>
                     <div
@@ -385,8 +385,8 @@
                         </h4>
                         <p>
                             <span class="skill-tag">OpenShift</span
-                            ><span class="skill-tag">Kubernetes</span
-                            ><span class="skill-tag">Docker</span>
+                            >, <span class="skill-tag">Kubernetes</span
+                            >, <span class="skill-tag">Docker</span>
                         </p>
                     </div>
                     <div
@@ -397,8 +397,8 @@
                         </h4>
                         <p>
                             <span class="skill-tag">Ansible</span
-                            ><span class="skill-tag">Bash</span
-                            ><span class="skill-tag">Python</span>
+                            >, <span class="skill-tag">Bash</span
+                            >, <span class="skill-tag">Python</span>
                         </p>
                     </div>
                     <div
@@ -409,7 +409,7 @@
                         </h4>
                         <p>
                             <span class="skill-tag">Elastic Search</span
-                            ><span class="skill-tag">AppDynamics</span>
+                            >, <span class="skill-tag">AppDynamics</span>
                         </p>
                     </div>
                     <div
@@ -420,9 +420,9 @@
                         </h4>
                         <p>
                             <span class="skill-tag">SQL</span
-                            ><span class="skill-tag">PL/SQL</span
-                            ><span class="skill-tag">Finacle Scripting</span
-                            ><span class="skill-tag">VBA</span>
+                            >, <span class="skill-tag">PL/SQL</span
+                            >, <span class="skill-tag">Finacle Scripting</span
+                            >, <span class="skill-tag">VBA</span>
                         </p>
                     </div>
                     <div
@@ -433,10 +433,10 @@
                         </h4>
                         <p>
                             <span class="skill-tag">API Connect</span
-                            ><span class="skill-tag">Linux</span
-                            ><span class="skill-tag">Git</span
-                            ><span class="skill-tag">Microsoft IIS</span
-                            ><span class="skill-tag">Oracle WebLogic</span>
+                            >, <span class="skill-tag">Linux</span
+                            >, <span class="skill-tag">Git</span
+                            >, <span class="skill-tag">Microsoft IIS</span
+                            >, <span class="skill-tag">Oracle WebLogic</span>
                         </p>
                     </div>
                 </div>
