--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <section id="tech-stack" class="py-16 md:py-24 bg-white">
             <div class="max-w-5xl mx-auto px-6 lg:px-8">
                 <h2 class="section-heading">
-                    My <span class="accent-orange">Tech Stack</span>
+                    My <span class="accent-orange">Tech & Tools</span>
                 </h2>
                 <p class="text-center text-slate-600 mb-12 max-w-2xl mx-auto">
                     A comprehensive overview of the technologies and tools I
@@ -374,7 +374,7 @@
                         </h4>
                         <p>
                             <span class="skill-tag">Google Cloud Platform</span
-                            >, <span class="skill-tag">Azure Fundamentals</span>
+                            >, <span class="skill-tag">Azure</span>
                         </p>
                     </div>
                     <div
@@ -524,7 +524,7 @@
                     My Credly <span class="accent-orange">Badges</span>
                 </h2>
                 <p class="text-center text-slate-600 mb-12 max-w-2xl mx-auto">
-                    Showcasing my verified digital credentials earned through
+                    View my verified digital credentials earned through
                     professional development and certification exams.
                 </p>
                 <div
