--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <section id="tech-stack" class="py-16 md:py-24 bg-white">
             <div class="max-w-5xl mx-auto px-6 lg:px-8">
                 <h2 class="section-heading">
-                    My <span class="accent-orange">Tech & Tools</span>
+                    My <span class="accent-orange">Tech Stack</span>
                 </h2>
                 <p class="text-center text-slate-600 mb-12 max-w-2xl mx-auto">
                     A comprehensive overview of the technologies and tools I
