--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         </h4>
                         <p>
                             <span class="skill-tag">API Connect</span
-                            >, <span class="skill-tag">Linux</span
+                            >, <span class="skill-tag">Red Hat Enterprise Linux</span
                             >, <span class="skill-tag">Git</span
                             >, <span class="skill-tag">Microsoft IIS</span
                             >, <span class="skill-tag">Oracle WebLogic</span>
